# PVcircuit

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tomlproject.yml
data/: IBC2x2.csv  MM927Bn10EL.csv  MM927Bn10EL.xlsx  MM927Bn10JV.csv  MM927EL.csv  MM927JV.csv  MS874n4Cdark_CZ_JA.csv  MS874n4papy_C_CZ_JA.csv  MS874n4papy_C_CZ_VA.csv  MS874n4papy_C_CZ_VB.csv  NREL_32-14.csv  QI0926J_C.csv  QI0926P_D.csv  Si153_041420hr_CR_JA.csv  Si153_041420hr_CR_JB.csv  Si153_041420hr_CR_VA.csv  Si153_041420hr_CR_VB.csv  Si_101_E1_005_14_2B_JV.csv  Si_101_E1_005_14_2B_postITO_JV.csv  Si_EQE.csv  Si_H2M2W3_JV.csv  Si_ISFH-31_04_JV.csv  WB417n6_C_EQE.csv  WB417n8Cdark_CZ_JB.csv  WB417n8_Cpapy_CZ_VB.csv
data/32_14/: 32_14.res  32_14.tra
data/32_14/IV/: 32_14.drk  32_14.jv  32_14.lgt  32_14.sj
data/ujson/: 40.13_-105.22_1616_-7_axis.ujson  40.13_-105.22_1616_-7_tilt.ujson
images/: electricalschematic.pxp
notebooks/: 4J IMM.ipynb  EY_example.ipynb  EY_example_III-V.ipynb  EYmap.ipynb  EYtest.ipynb  InAs.ipynb  MS874_3T.ipynb  PVK_Si_Tandem.ipynb  PVKfitting.ipynb  QEclasstest.ipynb  QEtest.ipynb  RealData.ipynb  Si1J.ipynb  SiIBC.ipynb  SiIBC_3T.ipynb  Untitled.ipynb  WB417 GaInP-r-GaAs.ipynb  WB417_3T.ipynb  testpvc.ipynb
notebooks/notebook_data/: ASTMG173.csv  ISFH_32-14.csv  MM927Bn5CEQE.csv  MP846n8.csv  MP905n5.csv  MS874n4Cdark_CZ_JB.csv  MS874n4papy_C_CZ_JB.csv  PSC_EQE.csv  WB417n6_C_EQE.csv  WB417n8Cdark_CZ_JA.csv  WB417n8_Cpapy_CZ_JA.csv  WB417n8_Cpapy_CZ_JB.csv  WB417n8_Cpapy_CZ_VA.csv
pvcircuit/: EY.py  PlotWithControls.py  __init__.py  conversions.py  iv3T.py  junction.py  multi2T.py  obsoletefromjunction.py  qe.py  qeanalysis.py  tandem3T.py
pvcircuit/data/: ASTMG173.csv
tests/: test_4JIMM.py  test_conversions.py  test_iv3t.py  test_junction.py  test_multi2T.py  test_oldpvc.py  test_qe.py  test_serialization.py  test_tandem3T.py
tests/test_files/: IBC2x2.csv  Junction.txt  Pvsk_1.70MA-free_JV.csv  Tandem3T_I3Trel-r.txt  Tandem3T_I3Trel-s.txt  Tandem3T_J3TAabs-r.txt  Tandem3T_J3TAabs-s.txt  Tandem3T_V3T-r.txt  Tandem3T_VI0_VrzIto.txt  Tandem3T_VI0_VtrIzo.txt  Tandem3T_VI0_VztIro.txt  Tandem3T_VIpoint_IroVyhex.txt  Tandem3T_VIpoint_ItoVtr.txt  Tandem3T_VIpoint_ItoVxhex.txt  Tandem3T_VIpoint_IzoVrz.txt  Tandem3T_VIpoint_IzoVxhex.txt  Tandem3T_iv3t_vm_11.txt  Tandem3T_iv3t_vm_21.txt  Tandem3T_iv3t_vm_32.txt  Tandem3T_iv3t_vmpp_11.txt  Tandem3T_iv3t_vmpp_21.txt  Tandem3T_iv3t_vmpp_32.txt  Tandem3T_specialpoints.txt  Tandem3T_str.txt  iv3t_box.txt  iv3t_calc.txt  iv3t_fromcsv.txt  iv3t_line.txt  iv3t_mpp.txt  iv3t_resize.txt  iv3t_setter.txt  iv3t_str.txt  oldpvc_Multi2T.txt  oldpvc_Multi2T_IV.csv  oldpvc_Multi2T_MPP.txt  oldpvc_Tandem3T_CM.txt  oldpvc_Tandem3T_MPP.txt  oldpvc_Tandem3T_VM21.txt  oldpvc_Tandem3T_VM32.txt  oldpvc_Tandem3T_VM32_set.txt  (+1 more)
