# Guide (user-friendly):
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# Specification (technical, formal):
# https://packaging.python.org/en/latest/specifications/pyproject-toml/


# Choosing a build backend:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#choosing-a-build-backend
[build-system]
# A list of packages that are needed to build your package:
requires = ["setuptools", "wheel"]  # REQUIRED if [build-system] table is used
# The name of the Python object that frontends will use to perform the build:
build-backend = "setuptools.build_meta"  # If not defined, then legacy behavior can happen.


[project]
# This is the name of your project. The first time you publish this
# package, this name will be registered for you. It will determine how
# users can install this project, e.g.:
#
# $ pip install sampleproject
#
# And where it will live on PyPI: https://pypi.org/project/sampleproject/
#
# There are some restrictions on what makes a valid project name
# specification here:
# https://packaging.python.org/specifications/core-metadata/#name
name = "pvcircuit"  # REQUIRED, is the only field that cannot be marked as dynamic.

# Versions should comply with PEP 440:
# https://www.python.org/dev/peps/pep-0440/
#
# For a discussion on single-sourcing the version, see
# https://packaging.python.org/guides/single-sourcing-package-version/
version = "0.0.5"  # REQUIRED, although can be dynamic

# This is a one-line description or tagline of what your project does. This
# corresponds to the "Summary" metadata field:
# https://packaging.python.org/specifications/core-metadata/#summary
description = "Multijunction PV circuit model"

# This is an optional longer description of your project that represents
# the body of text which users will see when they visit PyPI.
#
# Often, this is the same as your README, so you can just read it in from
# that file directly.
#
# This field corresponds to the "Description" metadata field:
# https://packaging.python.org/specifications/core-metadata/#description-optional
readme = "README.md"

# Specify which Python versions you support. In contrast to the
# 'Programming Language' classifiers in this file, 'pip install' will check this
# and refuse to install the project if the version does not match. See
# https://packaging.python.org/guides/distributing-packages-using-setuptools/#python-requires
requires-python = ">=3.9"

# This is either text indicating the license for the distribution, or a file
# that contains the license.
# https://packaging.python.org/en/latest/specifications/core-metadata/#license
license = {file = "LICENSE.txt"}

# This field adds keywords for your project which will appear on the
# project page. What does your project relate to?
#
# Note that this is a list of additional keywords, separated
# by commas, to be used to assist searching for the distribution in a
# larger catalog.
keywords = ["PV modeling", "Tandem solar cells"]

# This should be your name or the name of the organization who originally
# authored the project, and a valid email address corresponding to the name
# listed.
authors = [
    {name = "John Geisz", email = "john.geiz@nrel.gov" }
]

# This should be your name or the names of the organization who currently
# maintains the project, and a valid email address corresponding to the name
# listed.
maintainers = [
    {name = "John Geisz", email = "john.geiz@nrel.gov" },
    {name = "Robert Witteck", email = "robert.witteck@nrel.gov" }
]

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 4 - Beta",

  # Indicate who your project is intended for
  "Intended Audience :: PV-research",
  "Topic :: PV modeling :: PV simulation",

  # Pick your license as you wish
  "License :: OSI Approved :: BSD License",

  # Specify the Python versions you support here. In particular, ensure
  # that you indicate you support Python 3. These classifiers are *not*
  # checked by "pip install". See instead "requires-python" key in this file.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3 :: Only",
]

# This field lists other packages that your project depends on to run.
# Any package you put here will be installed by pip when your project is
# installed, so they must be valid existing projects.
#
# For an analysis of this field vs pip's requirements files see:
# https://packaging.python.org/discussions/install-requires-vs-requirements/
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
    "ipywidgets",
    "ipympl",
    "jupyter",
    "parse",
    "pvlib",

    "dask",
    "tqdm",
]

# List additional groups of dependencies here (e.g. development
# dependencies). Users will be able to install these using the "extras"
# syntax, for example:
#
#   $ pip install sampleproject[dev]
#
# Optional dependencies the project provides. These are commonly
# referred to as "extras". For a more extensive definition see:
# https://packaging.python.org/en/latest/specifications/dependency-specifiers/#extras
[project.optional-dependencies]
dev = [
    "black",
    "check-manifest",
    "coverage",
    "pytest",
    "pytest-cov",
    "ruff",
    ]
test = [
    "check-manifest",
    "coverage",
    "pytest",
    "pytest-cov",
    ]

# List URLs that are relevant to your project
#
# This field corresponds to the "Project-URL" and "Home-Page" metadata fields:
# https://packaging.python.org/specifications/core-metadata/#project-url-multiple-use
# https://packaging.python.org/specifications/core-metadata/#home-page-optional
#
# Examples listed include a pattern for specifying where the package tracks
# issues, where the source is hosted, where to say thanks to the package
# maintainers, and where to support the project financially. The key is
# what's used to render the link text on PyPI.
[project.urls]
"Homepage" = "https://github.com/NREL/PVcircuit"
"Bug Reports" = "https://github.com/NREL/PVcircuit/issues"

# This is configuration specific to the `setuptools` build backend.
# If you are using a different build backend, you will need to change this.
# [tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
# package-data = {"sample" = ["*.dat"]}
# packages = ["pvcircuit"]  # Adjust based on your actual package structure
# package-data = {"pvcircuit" = ["data/*"]}
# include-package-data = true
# [options.package_data]
# pvcircuit ="data/*"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pvcircuit*"]

[tool.setuptools.package-data]
pvcircuit = ["data/*"]

[tool.ruff]
# select = ["E", "W", "F"]  # Select categories of linting rules
ignore = [
    "F401", # Ignore unused imports
    # "F841", # Ignore unused variables
]

[tool.pytest.ini_options]
# Specify directories to ignore during testing
norecursedirs = ["Share", "notebooks", "images", "data"]
addopts = "--cov=pvcircuit --cov-report=html --cov-report=term" # run coverage automatically with pytest

[tool.coverage.run]
branch = true
source = ["pvcircuit"]
omit = [
    "tests/*",
    "Share/*",
    "notebooks/*",
    "images/*",
    "data/*",
    "pvcircuit/PlotWithControls.py",
]

[tool.coverage.report]
show_missing = true # shows lines without coverage

[tool.coverage.html]
directory = "htmlcov"  # HTML output directory
title = "PVcircuit coverage report"